[package]
name = "nakacli"
version = "0.3.0"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]
description = "CLI client for Nakadi"
license = "MIT"

[dependencies]
bytes = "0.4"
clap = "2.29.0"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
hyper-tls = "0.1"
ansi_term = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3"

[package.metadata.release]
upload-doc = false
